# jiveaudio

./: .hgtags  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  audio.c  audio.cpp  audio_mime.c  common.h  config.h.in  configure.ac  dshow_media_player.cpp  dshow_media_player.h  dshow_player.cpp  exec_media_player.cpp  exec_media_player.h  export-dist.sh  file_media_player.cpp  jiveaudio.bdsgroup  jiveaudio.groupproj  jiveaudio.texi  media_player.cpp  media_player.h  midi.c  midi.cpp  midi_mime.c  mkinstalldirs  new.cpp  np_entry.c  np_entry.cpp  npaudio.bdsproj  npaudio.bpr  npaudio.def  npaudio.rc  npaudio.res  sign-dist.sh  sign-distdir.sh  sox_media_player.cpp  (+2 more)
doc/: Makefile.am  jiveaudio.texi
java/: Makefile.am  jri.h
libgnu/: Makefile.am
m4/: gnulib-cache.m4  gnulib-comp.m4
mozilla/: Makefile.am  jri.h  npapi.h  npupp.h  prcpucfg.h
mozilla/obsolete/: Makefile.am
nspr/: Makefile.am
plugin/: npapi.h  npupp.h
plugins/: Makefile.am  audio.cpp  audio.h  buffer.cpp  buffer.h  debug.c  debug.h  exec_media_player.h  file_player.cpp  jive.cpp  jive.h  np_entry.c  np_entry.cpp  npaudio.bdsproj  npaudio.cpp  npaudio.h  npaudio.rc  npaudio.rc.in  npjive.bdsproj  npjive.bpf  npjive.cbproj  npjive.def  npjive.rc  npn_gate.c  npn_gate.cpp  player.cpp  player.h  player_posix.cpp  player_posix.h  player_win32.cpp  player_win32.h  plugin.cpp  plugin.h  resource.rc  resources.rc  sox_media_player.cpp  win32.cpp  win32.h
sdk/: Makefile.am  jni_md.h  npapi.h  npruntime.h  nptypes.h  npupp.h
sdk/include/: Makefile.am  npapi.h  npupp.h  prtypes.h
win32/: config.h  prcpucfg.h
xpi/: install.js.in
